--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
+    "@react-google-maps/api": "^2.19.2",
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.1"
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.11.1",
+    "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
