--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.11.1",
+    "redux-persist": "^6.0.0",
     "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
